1. Метод .of [#70623 #497369]