@@ -3,6 +3,7 @@ package ru.job4j.collection;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
+import java.util.Arrays;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -26,12 +27,12 @@ class DepartmentsTest {
 
     @Test
     void whenMissedSomeDepartmentsCode() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expected = List.of(
+        List<String> expected = Arrays.asList(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -46,7 +47,7 @@ class DepartmentsTest {
 
     @Test
     void whenSortAscWithoutMissedDepartments() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -57,7 +58,7 @@ class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expected = List.of(
+        List<String> expected = Arrays.asList(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -74,7 +75,7 @@ class DepartmentsTest {
 
     @Test
     void whenSortAscWithMissedDepartments() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K2/SK1",
@@ -82,7 +83,7 @@ class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expected = List.of(
+        List<String> expected = Arrays.asList(
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
                 "K1/SK2",
@@ -96,7 +97,7 @@ class DepartmentsTest {
 
     @Test
     void whenSortDescWithoutMissedDepartments() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -107,7 +108,7 @@ class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expected = List.of(
+        List<String> expected = Arrays.asList(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
@@ -124,7 +125,7 @@ class DepartmentsTest {
 
     @Test
     void whenSortDescWithMissedDepartments() {
-        List<String> input = List.of(
+        List<String> input = Arrays.asList(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -133,7 +134,7 @@ class DepartmentsTest {
                 "K2/SK1/SSK2",
                 "K2/SK1/SSK1"
         );
-        List<String> expected = List.of(
+        List<String> expected = Arrays.asList(
                 "K2/SK1",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2",
